Changes for Zookeepr
====================

0.2.6
-----

 * Fix group-by bug in postgresql backends for accommodation bed counter.
   (Jamie Wilkinson)
 * Make embedded wiki bit work again.  (Jamie Wilkinson)
 * Remove handle from profile title.  (Jamie Wilkinson)

0.2.5
-----

 * Use the new accommodation data model for displaying accommodation options
   on the registration page.  (Jamie Wilkinson)
 * Redirect back to original URL after signing in.  (John Ferlito)
 * Create a symlink in the public/ static files directory pointing to
   MoinMoin attachments as a workaround for moin attachment brokenness.
   (John Ferlito)
 * Made sure that people don't register more than once. (Jamie Wilkinson)
 * Update the accommodation data model to allow us to see how many beds are
   already taken for a given venue (and this value is shared across different
   options at the same venue).  (Jamie Wilkinson)
 * Add a controller for user profiles, and embed proposal bios where they
   exist.  (Jamie Wilkinson)

0.2.4
-----

 * Fixed rego email teesize message
 * Dinner price on rego form
 * Added Open Day registration

0.2.3
-----

 * Add accommodation data model.
 * Added validation schema for existing handle/display names.
 * Merged A+MX email address domain validation from Jiri Baum.

0.2.2
-----

 * Changed from pydns validation to socket.gethostbyname (this was
   done due to a perceived bug with timeouts which was a different bug 
   affecting all errors, so it could be rolled back)
 * Include raw HTML into a Mghty template from outside the egg
 * Random content changes

0.2.1
-----

 * Add validator to prevent 500 errors when trying to register with an
   existing account.

0.2
---

 * The "I think we're ready to take registrations" release.
 * Add more editors, shells, and distros (and by "add" of course I mean
   "remove and clean up").
 * Add the silly description to the registration form.
 * Store the previous LCA attendance and Miniconf preference data (hackishly